Added links to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <footer>Coded by by Londeka Khoza</footer>
+    <footer>
+      Coded by <a href="https://github.com/Londeka01">Londeka Khoza </a> hosted
+      on <a href="https://github.com/Londeka01/week7-project">Github</a> and
+      website
+      <a href="https://65f93db2bd20d28238de32cf--week7-shecodes.netlify.app/"
+        >hosted on Netlify</a
+      >
+    </footer>
   </body>
 </html>
