updated the footer content

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   <body>
     <h1>Hello World</h1>
     <footer>
-      Coded by <a href="https://github.com/Londeka01">Londeka Khoza </a> hosted
-      on <a href="https://github.com/Londeka01/week7-project">Github</a> and
-      website
-      <a href="https://65f93db2bd20d28238de32cf--week7-shecodes.netlify.app/"
+      Coded by
+      <a href="https://github.com/Londeka01" target="_blank">Londeka Khoza </a>
+      is
+      <a href="https://github.com/Londeka01/week7-project" target="_blank"
+        >open-sourced on Github</a
+      >
+      and
+      <a
+        href="https://65f93db2bd20d28238de32cf--week7-shecodes.netlify.app/"
+        target="_blank"
         >hosted on Netlify</a
       >
     </footer>
