Added the html  to the project

--- a/index.html
+++ b/index.html
@@ -2,24 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
-    <title>Shecodes week 7</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>shecodes week7</title>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+        <div>
+      <h1>Paris</h1>
+      <p>
+        Tuesday 10:42, broken clouds
+        <br />
+        Humidity: 91%, Wind: 2.57km/h
+      </p>
+    </div>
+      </main>
+      <div>🌥️ 12°C </div>
+    </main>
     <footer>
-      Coded by
-      <a href="https://github.com/Londeka01" target="_blank">Londeka Khoza </a>
+      This project was coded by
+      <a href="https://github.com/Londeka01" target="_blank"> Londeka Khoza</a>
       is
-      <a href="https://github.com/Londeka01/week7-project" target="_blank"
-        >open-sourced on Github</a
+      <a href="https://github.com/Londeka01/week7-project" target="_blank">
+        open-sourced on Github</a
       >
       and
       <a
-        href="https://65f93db2bd20d28238de32cf--week7-shecodes.netlify.app/"
+        href="https://65f9446d1e18e0000822bd3e--week7-shecodes.netlify.app/"
         target="_blank"
-        >hosted on Netlify</a
       >
+        hosted on Netlify</a>
+      
     </footer>
-  </body>
+  </head>
+  <body></body>
 </html>
