--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             type="search"
             placeholder="Enter a city.."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -42,7 +43,6 @@
           </div>
         </div>
       </main>
-
       <footer>
         This project was coded by
         <a href="https://github.com/Londeka01" target="_blank"> Londeka Khoza</a
@@ -58,5 +58,6 @@
         >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
