--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
             <div class="weatehr-app-unit">°C</div>
           </div>
         </div>
+        <div class="weather-forecast">
+            <div class="row"></div>
+            <div class="col-2">
+                <div class="weather-forecast-date"></div>
+                Thurs
+                <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="" width="42"/>
+                <div class="weather-forecast-temperature">
+                    <span class="weather-forecast-temperature-maximum">
+                        18°
+                    </span>
+                    <span class="weather-forecast-temperature-minimum">
+                12°
+                </span>
+            </div>
+        </div>
       </main>
       <footer>
         This project was coded by
